--- a/LEATS Project/Views/Shared/_AdminPartial.cshtml
+++ b/LEATS Project/Views/Shared/_AdminPartial.cshtml
@@ -3,9 +3,9 @@
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Account<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-            <li>@Html.ActionLink("Manage Profile", "About", "Home")</li>
+            <li>@Html.ActionLink("Manage Profile", "Index", "Administrators")</li>
             <li>@Html.ActionLink("Manage Applicatons", "Index", "TutorApplications")</li>
-            <li>@Html.ActionLink("Check Tutors Reviews", "About", "Home")</li>
+            <li>@Html.ActionLink("Check Tutors Reviews", "Index", "Reviews")</li>
         </ul>
     </li>
 </ul>
