--- a/LEATS Project/Views/Shared/_GeneralPartial.cshtml
+++ b/LEATS Project/Views/Shared/_GeneralPartial.cshtml
@@ -3,6 +3,17 @@
     <li>@Html.ActionLink("Find a Tutor", "Index", "Specialisations")</li>
     <li>@Html.ActionLink("Add module", "Create", "TutorApplications")</li>
     <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Student Account<span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu">
+            <li>@Html.ActionLink("Search Tutor", "Index", "Specialisations")</li>
+            <li>@Html.ActionLink("Manage Profile", "About", "Home")</li>
+            <li>@Html.ActionLink("Manage Appointments", "Details", "Students")</li>
+            <li>@Html.ActionLink("Make Payments", "About", "Home")</li>
+            <li>@Html.ActionLink("Review Tutor", "About", "Home")</li>
+        </ul>
+    </li>
+
+    <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tutor Account<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
             <li>@Html.ActionLink("Manage Appointments", "Index", "Appointments")</li>
@@ -13,5 +24,7 @@
         </ul>
     </li>
 </ul>
+
+
 
 
