--- a/LEATS Project/Views/Shared/_StudentPartial.cshtml
+++ b/LEATS Project/Views/Shared/_StudentPartial.cshtml
@@ -1,13 +1,15 @@
 ﻿
 <ul class="nav navbar-nav">
+    <li>@Html.ActionLink("Find a Tutor", "Index", "Specialisations")</li>
+    <li>@Html.ActionLink("Become a Tutor", "Create", "TutorApplications")</li>
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Student Account<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
             <li>@Html.ActionLink("Search Tutor", "Index", "Specialisations")</li>
-            <li>@Html.ActionLink("Manage Profile", "About", "Home")</li>
-            <li>@Html.ActionLink("Manage Appointments", "Details", "Students")</li>
-            <li>@Html.ActionLink("Make Payments", "About", "Home")</li>
-            <li>@Html.ActionLink("Review Tutor", "About", "Home")</li>
+            <li>@Html.ActionLink("Manage Profile", "Index", "Students")</li>
+            <li>@Html.ActionLink("Manage Appointments", "Index", "Appointments")</li>
+            <li>@Html.ActionLink("Make Payments", "Create", "Payments")</li>
+            <li>@Html.ActionLink("Review Tutor", "Create", "Reviews")</li>
         </ul>
     </li>
 </ul>
