External part completed

--- a/LEATS Project/Views/Home/About.cshtml
+++ b/LEATS Project/Views/Home/About.cshtml
@@ -1,7 +1,62 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>About Us</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="~/Content/about.css" />
+    <style>
 
-<p>Use this area to provide additional information.</p>
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h2>Trusted Tutor Supplier</h2>
+    </div>
+
+    <div class="row">
+        <div class="column" style="background-color:white;">
+            <h3>
+                <br />
+                <br />
+                <strong>Our Mission is </strong>To provide safe and effective face to face and online tuition to UKZN students by promoting the services of our amazingly talented, screened & qualified registered tutors.
+            </h3>
+        </div>
+        <div class="column" style="background-color:white;">
+            <img src="~/Images/image.jpg" alt="Nature" style="width:100%">
+        </div>
+       
+    </div>
+    <div class="row">
+        <div class="column" style="background-color:white;">
+            <img src="~/Images/b.jpg" alt="Nature" style="width:100%">
+        </div>
+        <div class="column" style="background-color:white;">
+            <br />
+            <br />
+            <br />
+            <h2><strong>Why do you need a tutor?</strong>
+            <br />
+                <h4>The demand for tutors who give extra lessons either face to face or online is continually rising worldwide. Mainstream scholars, home-schoolers, university students, distance learners, and adults wanting to learn a new langage or skill are choosing to use the services of personal tutors to help them achieve their academic goals.</h4>
+            </h2>
+        </div>
+    </div>
+    <br />
+    <hr />
+    <br>
+    <div class="row">
+    <div class="column" style="background-color:white;">
+        <h4>Tutor Listings are comprehensive and provide testimonials, qualifications, video introductions, pricing, documentation and tutoring experience with the added convenience of an online booking system. Search, select, book and confirm your tutor quickly and easily. After your engagement, feel free to leave a testimonial.</h4>
+    </div>
+    <div class="column" style="background-color:white;">
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    </div>
+    </div>
+
+    @*<div class="footer">
+        <p>Footer</p>
+    </div>*@
+
+</body>
+</html>
+
