--- a/LEATS Project/Views/Home/Contact.cshtml
+++ b/LEATS Project/Views/Home/Contact.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contacts";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+<br />
+<h2>@ViewBag.Title</h2>
+<hr />
 <address>
     Leats Technologies<br />
     186 Varsity Drive<br />
