--- a/LEATS Project/Views/Home/Index.cshtml
+++ b/LEATS Project/Views/Home/Index.cshtml
@@ -101,8 +101,8 @@
                 <div class="w3-card w3-margin w3-margin-top">
                     <!--<img src="~/Images/" style="width:100%">-->
                     <div class="w3-container w3-white">
-                        <h4><b>Become A Tutor</b></h4>
-                        <p>Click here to register</p>
+                        <h4 style="color:maroon"><b>Want to find or become a tutor?</b></h4>
+                        <h5>Click <strong>@Html.ActionLink("HERE", "Login", "Account")</strong> to login/register</h5>
                     </div>
                 </div><hr>
 
@@ -113,22 +113,18 @@
                     </div>
                     <ul class="w3-ul w3-hoverable w3-white">
                         <li class="w3-padding-16">
-                            <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
                             <span class="w3-large">COMP 102</span><br>
                             <span>Introduction to Java Programming</span>
                         </li>
                         <li class="w3-padding-16">
-                            <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
                             <span class="w3-large">ISTN 101</span><br>
                             <span>IT Fundamentals</span>
                         </li>
                         <li class="w3-padding-16">
-                            <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
                             <span class="w3-large">ECON 101</span><br>
                             <span>Microeconomics</span>
                         </li>
                         <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-                            <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
                             <span class="w3-large">ISTN 212</span><br>
                             <span>Databases and Programming</span>
                         </li>
