--- a/LEATS Project/Content/bootstrap.css
+++ b/LEATS Project/Content/bootstrap.css
@@ -1096,7 +1096,7 @@ pre code {
   .col-md-9,
   .col-md-10,
   .col-md-11 {
-    float: left;
+    float:right;
   }
   .col-md-1 {
     width: 8.333333333333332%;
