--- a/LEATS Project/Views/Account/Register.cshtml
+++ b/LEATS Project/Views/Account/Register.cshtml
@@ -3,12 +3,14 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<br />
+<br />
+<br />
 <!--Creates an HTML form (BeginForm)-->
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h2>Create a new account</h2>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
@@ -36,6 +38,11 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 }
 
 @section Scripts {
