--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -48,9 +48,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Time Slot", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentTime, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.DropDownListFor(model => model.AppointmentTime, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select slot", Value = "", Selected = true },
+               new SelectListItem {Text = "08 - 09:30 AM", Value = "08 - 09:30 AM" },
+               new SelectListItem {Text = "10 - 11:30 AM", Value = "10 - 11:30 AM" },
+               new SelectListItem {Text = "12 - 13:30 AM", Value = "12 - 13:30 AM" },
+               new SelectListItem {Text = "14 - 15:30 AM", Value = "14 - 15:30 AM" },
+               new SelectListItem {Text = "16 - 17:30 AM", Value = "16 - 17:30 AM" },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AppointmentTime, "", new { @class = "text-danger" })
             </div>
         </div>
