--- a/LEATS Project/Views/Students/Edit.cshtml
+++ b/LEATS Project/Views/Students/Edit.cshtml
@@ -15,21 +15,24 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.StudentID)
-
+        @*@{ 
+            Model.Id = "3ad69009-ae52-4228-a9ce-39795a5b33b4";
+            //Model.Id = Convert.ToString(Session["ActiveUser"]);
+        }*@
         <div class="form-group">
-            @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>
-            @*@Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
+            </div>*@
+            @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
            {
-               new SelectListItem {Text = Session["ActiveUserEmail"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+               new SelectListItem {Text = Session["ActiveUser"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control",@style ="display:none" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>*@
+            </div>
         </div>
 
         <div class="form-group">
