--- a/LEATS Project/Views/Appointments/Details.cshtml
+++ b/LEATS Project/Views/Appointments/Details.cshtml
@@ -19,6 +19,13 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.AppointmentDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AppointmentDate)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.AppointmentTime)
         </dt>
 
