--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -46,6 +46,13 @@
                 @Html.ValidationMessageFor(model => model.RequestTime, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.AppointmentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.AppointmentDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AppointmentDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.Label("Time Slot", htmlAttributes: new { @class = "control-label col-md-2" })
