Kubi ngempela manje!

--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -124,7 +124,7 @@
 
         <script>
             function myFunction() {
-                alert("Appointment request sent sucessfully");
+                alert();
 }
         </script>
 
