Outside review done

--- a/LEATS Project/Views/Home/About.cshtml
+++ b/LEATS Project/Views/Home/About.cshtml
@@ -46,10 +46,14 @@
     <br>
     <div class="row">
     <div class="column" style="background-color:white;">
+        <br />
+        <br />
         <h4>Tutor Listings are comprehensive and provide testimonials, qualifications, video introductions, pricing, documentation and tutoring experience with the added convenience of an online booking system. Search, select, book and confirm your tutor quickly and easily. After your engagement, feel free to leave a testimonial.</h4>
     </div>
     <div class="column" style="background-color:white;">
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <video width="320" controls>
+            <source src="~/Images/Tutoring jobs in South Africa.mp4" type="audio/mp4"/>
+        </video>
     </div>
     </div>
 
