--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -124,13 +124,13 @@
 
         <script>
             function myFunction() {
-                alert();
-}
+                alert(@Session["successMsg"])
+            }
         </script>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" onclick="myFunction()" class="btn btn-default" />
+                <input type="submit" value="Create" onsubmit="myFunction()" class="btn btn-default" />
             </div>
         </div>
     </div>
