--- a/LEATS Project/Views/Home/Index.cshtml
+++ b/LEATS Project/Views/Home/Index.cshtml
@@ -43,7 +43,8 @@
                     <!--My slideshow images-->
                     <div class="SlideShowImages">
                         <div class="slide">
-                            <img src="~/Images/1.png" alt="Nature" style="width:100%">
+                            <img src="~/Images/6-advantages-of-online-tutoring.jpeg" alt="Nature" style="width:100%">
+                            
                         </div>
                         
                     </div>
