--- a/LEATS Project/Views/Administrators/Details.cshtml
+++ b/LEATS Project/Views/Administrators/Details.cshtml
@@ -1,13 +1,10 @@
 ﻿@model LEATS_Project.Models.Administrator
-
-@{
-    ViewBag.Title = "Details";
-}
-
-<h2>Details</h2>
+<br />
+<br />
+<br />
 
 <div>
-    <h4>Administrator</h4>
+    <h4>My profile</h4>
     <div>
         <table>
             <tr>
@@ -127,6 +124,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.AdministratorID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("EDIT", "Edit", new { id = Model.AdministratorID }) |
+    @Html.ActionLink("BACK", "Index")
 </p>
