--- a/LEATS Project/Views/Administrators/Edit.cshtml
+++ b/LEATS Project/Views/Administrators/Edit.cshtml
@@ -1,17 +1,13 @@
 ﻿@model LEATS_Project.Models.Administrator
-
-@{
-    ViewBag.Title = "Edit";
-}
-
-<h2>Edit</h2>
+<br />
+<br />
+<h3>Edit profile</h3>
 
 @using (Html.BeginForm(Html.BeginForm("Edit", "Administrators", FormMethod.Post, new { enctype = "multipart/form-data" })))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Administrator</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.AdministratorID)
@@ -19,7 +15,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
+               @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["ActiveUser"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -165,5 +164,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("BACK", "Index")
 </div>
