--- a/LEATS Project/Views/Students/Details.cshtml
+++ b/LEATS Project/Views/Students/Details.cshtml
@@ -1,11 +1,7 @@
 ﻿@model LEATS_Project.Models.Student
-
-@{
-    ViewBag.Title = "Details";
-}
-
+<br />
 <h2>Your Profile</h2>
-
+<hr />
 <div>
     <div>
         <table>
@@ -157,6 +153,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.StudentID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("EDIT", "Edit", new { id = Model.StudentID }) |
+    @Html.ActionLink("BACK", "Index")
 </p>
