--- a/LEATS Project/Views/Shared/_TutorPartial.cshtml
+++ b/LEATS Project/Views/Shared/_TutorPartial.cshtml
@@ -9,7 +9,7 @@
             <li>@Html.ActionLink("Manage Payments", "Index", "Payments")</li>
             <li>@Html.ActionLink("Manage Applications", "Index", "TutorApplications")</li>
             <li>@Html.ActionLink("Apply for another module", "Create", "TutorApplications")</li>
-            <li>@Html.ActionLink("Deactivate account", "About", "Home")</li>
+            <li>@Html.ActionLink("Deactivate account", "InsideHome", "Home")</li>
         </ul>
     </li>
 </ul>
