--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -1,18 +1,13 @@
 ﻿@model LEATS_Project.Models.Appointment
-
-@{
-    ViewBag.Title = "Create";
-}
 <br />
 <br />
-<h2>Appointment Booking</h2>
+<h2>My appointment bookings</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4></h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
