--- a/LEATS Project/Views/Home/Index.cshtml
+++ b/LEATS Project/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
       <head>
-          <title>W3.CSS Template</title>
+          <title>LEATS</title>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <!--Right hand bar css-->
