--- a/LEATS Project/Views/Payments/Create.cshtml
+++ b/LEATS Project/Views/Payments/Create.cshtml
@@ -1,17 +1,14 @@
 ﻿@model LEATS_Project.Models.Payment
-
-@{
-    ViewBag.Title = "Create";
-}
-
-<h2>Create</h2>
+<br />
+<br />
+<br />
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Payment</h4>
+        <h1>PROTOTYPE (no functionality yet) </h1>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -62,14 +59,14 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </div>
+        </div>*@
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("BACK", "InsideIndex", "Home")
 </div>
