--- a/LEATS Project/Views/Shared/_Layout.cshtml
+++ b/LEATS Project/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                 @if (User.IsInRole("User"))
                 {
                     @Html.Partial("_UserPartial")
+                    @Html.Partial("_LoginPartial")
                 }
                 else if (User.IsInRole("Student") && User.IsInRole("Tutor"))
                 {
