--- a/LEATS Project/Views/Account/Register.cshtml
+++ b/LEATS Project/Views/Account/Register.cshtml
@@ -1,8 +1,4 @@
 ﻿@model LEATS_Project.Models.RegisterViewModel
-@{
-    ViewBag.Title = "Register";
-}
-
 <br />
 <br />
 <br />
@@ -16,19 +12,19 @@
 
     /*Was already here*/
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Email)
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Password)
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword)
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
