--- a/LEATS Project/Views/Modules/ModuleRequests/Details.cshtml
+++ b/LEATS Project/Views/Modules/ModuleRequests/Details.cshtml
@@ -35,11 +35,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Student.Id)
+            @Html.DisplayNameFor(model => model.Student.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Student.Id)
+            @Html.DisplayFor(model => model.Student.Email)
         </dd>
 
     </dl>
