--- a/LEATS Project/Views/Appointments/Edit.cshtml
+++ b/LEATS Project/Views/Appointments/Edit.cshtml
@@ -17,17 +17,17 @@
         @Html.HiddenFor(model => model.AppointmentID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StudentD, "StudentD")
+            
             <div class="col-md-10">
-                @Html.DropDownList("StudentD", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger" })
+                @Html.DropDownList("StudentD", null, htmlAttributes: new { @class = "form-control",@style = "display:none" })
+                @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger",})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TutorID, "TutorID")
+           
             <div class="col-md-10">
-                @Html.DropDownList("TutorID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("TutorID", null, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.TutorID, "", new { @class = "text-danger" })
             </div>
         </div>
