--- a/LEATS Project/Views/Students/Edit.cshtml
+++ b/LEATS Project/Views/Students/Edit.cshtml
@@ -12,17 +12,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.StudentID)
-        @*@{ 
-            Model.Id = "3ad69009-ae52-4228-a9ce-39795a5b33b4";
-            //Model.Id = Convert.ToString(Session["ActiveUser"]);
-        }*@
-        <div class="form-group">
-            @*@Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>*@
-            @Html.LabelFor(model => model.Id, "Id")
+
+        <div class="form-group",@style ="display:none">
+
+            
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
            {
