--- a/LEATS Project/Views/TutorApplications/Create.cshtml
+++ b/LEATS Project/Views/TutorApplications/Create.cshtml
@@ -9,13 +9,13 @@
         <h4>TutorApplication</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.StudentID)
-            <div class="col-md-10">
+        <div class="form-group",@style = "display:none">
+           
+            <div class="col-md-10",@style = "display:none">
                 @Html.DropDownListFor(model => model.StudentID, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["ActiveStudentID"].ToString(), Value = Session["ActiveStudentID"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
             </div>
         </div>
