--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LEATS_Project.Models.Appointment
 <br />
 <br />
-<h2>My appointment bookings</h2>
+<h2>Book appointment</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -58,9 +58,12 @@
         </div>
          
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentDuration)
+            @*@Html.LabelFor(model => model.AppointmentDuration)*@
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentDuration, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.DropDownListFor(model => model.AppointmentDetails, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "1", Value = "1", Selected = true },
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.AppointmentDuration, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -79,7 +82,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentStatus)
+            @*@Html.LabelFor(model => model.AppointmentStatus)*@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.AppointmentStatus, new List<SelectListItem>
            {
