--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -3,15 +3,15 @@
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Please complete your profile</h2>
+<br />
+<h3>Your profile is incomplete</h3>
 
 @using (Html.BeginForm(Html.BeginForm("Create", "Students", FormMethod.Post, new { enctype = "multipart/form-data" }))) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Student</h4>
+        <h4>Please complete your profile</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group",@style = "display:none">
