--- a/LEATS Project/Views/Appointments/Index.cshtml
+++ b/LEATS Project/Views/Appointments/Index.cshtml
@@ -66,7 +66,7 @@
                 @Html.DisplayFor(modelItem => item.Student.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit/Reschedule", "Edit", new { id = item.AppointmentID }) |
+                @Html.ActionLink("Edit", "Edit", new { id = item.AppointmentID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.AppointmentID }) |
             </td>
         </tr>
