Tutor and specialisation Created

--- a/LEATS Project/Views/Account/Login.cshtml
+++ b/LEATS Project/Views/Account/Login.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <p>
                     <br />
-                    <h5><strong>@Html.ActionLink("Click here to rgister as a new user", "Register")</strong></h5>
+                    <h5><strong>@Html.ActionLink("Click here to register as a new user", "Register")</strong></h5>
                
                 </p>
                 <br />
