--- a/LEATS Project/Views/TutorApplications/Create.cshtml
+++ b/LEATS Project/Views/TutorApplications/Create.cshtml
@@ -50,21 +50,13 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationDate)
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ApplicationDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ApplicationDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationStatus)
-            <div class="col-md-10">
+        <div class="form-group",@style = "display:none">
+           
+            <div class="col-md-10",@style ="display:none">
                 @Html.DropDownListFor(model => model.ApplicationStatus, new List<SelectListItem>
            {
                new SelectListItem {Text = "Pending", Value = "Pending", Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control",@style = "display:none"})
                 @Html.ValidationMessageFor(model => model.ApplicationStatus, "", new { @class = "text-danger" })
             </div>
         </div>
