--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -207,6 +207,11 @@
         </div>
 
         <div class="form-group">
+            <br />
+            @Html.Label("Please logout and login again after creating an account, this problem will be resolved soon!")
+            @Html.Label("A default image is selected according to your gender if you don't provide your profile picture!")
+            <br />
+            <br>
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Submit" class="btn btn-default" />
             </div>
